--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<h1>Wordle</h1>
-<p>By Joel</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+      <div class="wordle" id="wordle"></div>
+    </main>
+
+    <script type="module" src="main.js"></script>
+  </body>
+</html>
