--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <main>
+      <section class="headings">
+        <h1>Wordle+</h1>
+        <p>It's the Wordle you all know and love, but on steriods.</p>
+        <button class="btn" id="hint">Hint</button>
+        <button class="btn" id="changeType">Gametype</button>
+      </section>
       <div class="wordle" id="wordle"></div>
     </main>
 
