--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1>Wordle+</h1>
         <p>It's the Wordle you all know and love, but on steriods.</p>
         <button class="btn" id="hint">Hint</button>
-        <button class="btn" id="changeType">Gametype</button>
+        <!--<button class="btn" id="changeType">Gametype</button>-->
       </section>
       <div class="wordle" id="wordle"></div>
 
-      <div class="modal" data-modal="choose">
+      <div class="modal" data-modal="complete">
         <header>
-          <h2>Game options</h2>
+          <h2 id="result"></h2>
         </header>
         <section>
           <ul class="game-options">
