Major refactor of code

--- a/index.html
+++ b/index.html
@@ -21,16 +21,8 @@
         <header>
           <h2 id="result"></h2>
         </header>
-        <section>
-          <ul class="game-options">
-            <li class="option">Standard</li>
-            <li class="option">Pokemon</li>
-          </ul>
-          <h2>Grid Size</h2>
-          <input type="number" id="number" min="5" size="1" />
-        </section>
         <footer>
-          <button class="modal-button">Start</button>
+          <button class="modal-button" id="play-again">Play Again</button>
         </footer>
       </div>
     </main>
