Shake upon wrong word input

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       </section>
       <div class="wordle" id="wordle"></div>
 
+      <!-- <div class="alert-container">
+        <span class="alert" id="alert">Word doesn't exist</span>
+      </div> -->
+
       <div class="modal" data-modal="complete">
         <header>
           <h2 id="result"></h2>
