--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <span class="alert" id="alert">Word doesn't exist</span>
       </div> -->
 
-      <div class="modal" data-modal="complete">
+      <div class="modal" id="complete">
         <header>
           <h2 id="result"></h2>
+          <p>It took you <span id="turns"></span></p>
         </header>
         <footer>
           <button class="modal-button" id="play-again">Play Again</button>
