--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wordle by Joel McElroy</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
       <section class="headings">
         <h1>Wordle+</h1>
-        <p>It's the Wordle you all know and love, but on steriods.</p>
+        <p>It's the Wordle you all know and love, but on steroids.</p>
         <button class="btn" id="hint">Hint</button>
         <!--<button class="btn" id="changeType">Gametype</button>-->
       </section>
