Load cache state

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <section class="headings">
+        <p id="timer"></p>
         <h1>Wordle+</h1>
         <p>It's the Wordle you all know and love, but on steroids.</p>
         <button class="btn" id="hint">Hint</button>
