--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           <h2 id="result"></h2>
           <p>It took you <span id="turns"></span></p>
         </header>
+        <div class="scoreboard">
+          <p>Your total score: <span id="score"></span></p>
+          <p>You had <span id="timeLeft"></span> left on the clock!</p>
+        </div>
         <footer>
           <button class="modal-button" id="play-again">Play Again</button>
         </footer>
