--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <section class="headings">
         <p id="timer"></p>
         <h1>Wordle+</h1>
-        <p>It's the Wordle you all know and love, but on steroids.</p>
+        <p>It's the Wordle you all know and love.</p>
         <!--<button class="btn" id="changeType">Gametype</button>-->
       </section>
       <div class="wordle" id="wordle"></div>
